[package]
name = "torrent-client"
authors = ["Sajal"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bendy = "0.3.3"
clap = { version = "4.1.8", features = ["derive"] }
reqwest = "0.11.16"
serde_json = "1.0.95"
sha1_smol = "1.0.0"
tokio = { version = "1.27.0", features = ["full"] }
url = "2.3.1"
